--- a/EntityF/EntityF.csproj
+++ b/EntityF/EntityF.csproj
@@ -79,7 +79,13 @@
     <Compile Include="Migrations\201911032040242_AddUnitPrice1.Designer.cs">
       <DependentUpon>201911032040242_AddUnitPrice1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201911112212359_AddOrdersFinally.cs" />
+    <Compile Include="Migrations\201911112212359_AddOrdersFinally.Designer.cs">
+      <DependentUpon>201911112212359_AddOrdersFinally.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderDetails.cs" />
     <Compile Include="ProdContext.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
@@ -89,11 +95,19 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Shop.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Shop.Designer.cs">
+      <DependentUpon>Shop.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Category.datasource" />
+    <None Include="Properties\DataSources\Order.datasource" />
+    <None Include="Properties\DataSources\OrderDetails.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -117,6 +131,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201911032040242_AddUnitPrice1.resx">
       <DependentUpon>201911032040242_AddUnitPrice1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201911112212359_AddOrdersFinally.resx">
+      <DependentUpon>201911112212359_AddOrdersFinally.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Shop.resx">
+      <DependentUpon>Shop.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
